Итоговое задание 11 спринта - 10 итерация, исправлены ошибки автотеста.