@@ -1,48 +1,43 @@
 package ru.yandex.practicum.filmorate.service;
 
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import ru.yandex.practicum.filmorate.exception.NotFoundException;
 import ru.yandex.practicum.filmorate.exception.ValidationException;
 import ru.yandex.practicum.filmorate.model.Film;
 import ru.yandex.practicum.filmorate.storage.film.FilmStorage;
-import ru.yandex.practicum.filmorate.storage.film.InMemoryFilmStorage;
-import ru.yandex.practicum.filmorate.storage.user.InMemoryUserStorage;
 import ru.yandex.practicum.filmorate.storage.user.UserStorage;
 
 import java.time.LocalDate;
 import java.util.*;
+import java.util.stream.Collectors;
 
 @Service
 public class FilmService {
 
+    private static final LocalDate CINEMA_BIRTHDAY = LocalDate.of(1895, 12, 28);
+
     private final FilmStorage filmStorage;
     private final UserStorage userStorage;
 
+    // filmId -> set(userId)
     private final Map<Long, Set<Long>> likesByFilm = new HashMap<>();
 
-    public FilmService() {
-        this.filmStorage = new InMemoryFilmStorage();
-        this.userStorage = new InMemoryUserStorage();
-    }
-
-    @Autowired
     public FilmService(FilmStorage filmStorage, UserStorage userStorage) {
         this.filmStorage = filmStorage;
         this.userStorage = userStorage;
     }
 
     public Film create(Film film) {
-        validate(film);
+        validateFilm(film);
         return filmStorage.create(film);
     }
 
     public Film update(Film film) {
-        validate(film);
-
-        filmStorage.getById(film.getId())
-                .orElseThrow(() -> new NotFoundException("Фильм с id " + film.getId() + " не найден"));
-
+        validateFilm(film);
+        Long id = film.getId();
+        if (id == null || filmStorage.getById(id).isEmpty()) {
+            throw new NotFoundException("Фильм с id " + id + " не найден");
+        }
         return filmStorage.update(film);
     }
 
@@ -56,44 +51,49 @@ public class FilmService {
     }
 
     public void addLike(Long filmId, Long userId) {
-        getById(filmId);
+        // важно: проверяем, что пользователь существует в ТОМ ЖЕ хранилище (через DI)
         userStorage.getById(userId)
                 .orElseThrow(() -> new NotFoundException("Пользователь с id " + userId + " не найден"));
+        filmStorage.getById(filmId)
+                .orElseThrow(() -> new NotFoundException("Фильм с id " + filmId + " не найден"));
 
         likesByFilm.computeIfAbsent(filmId, k -> new HashSet<>()).add(userId);
     }
 
     public void removeLike(Long filmId, Long userId) {
-        getById(filmId);
         userStorage.getById(userId)
                 .orElseThrow(() -> new NotFoundException("Пользователь с id " + userId + " не найден"));
+        filmStorage.getById(filmId)
+                .orElseThrow(() -> new NotFoundException("Фильм с id " + filmId + " не найден"));
 
         Set<Long> likes = likesByFilm.get(filmId);
         if (likes != null) {
-            likes.remove(userId); // если лайка не было — просто no-op
+            likes.remove(userId);
         }
     }
 
-    public List<Film> getPopular(int count) {
-        if (count <= 0) count = 10;
+    public List<Film> getPopularFilms(Integer count) {
+        int limit = (count == null) ? 10 : count;
 
-        List<Film> films = new ArrayList<>(filmStorage.getAll());
-        films.sort((a, b) -> Integer.compare(
-                likesByFilm.getOrDefault(b.getId(), Set.of()).size(),
-                likesByFilm.getOrDefault(a.getId(), Set.of()).size()
-        ));
-
-        return films.stream().limit(count).toList();
+        return filmStorage.getAll().stream()
+                .sorted(Comparator
+                        .comparingInt((Film f) -> likesByFilm.getOrDefault(f.getId(), Set.of()).size()).reversed()
+                        .thenComparingLong(Film::getId))
+                .limit(limit)
+                .collect(Collectors.toList());
     }
 
-    private void validate(Film film) {
+    private void validateFilm(Film film) {
+        if (film == null) {
+            throw new ValidationException("Фильм не должен быть null");
+        }
         if (film.getName() == null || film.getName().isBlank()) {
             throw new ValidationException("Название фильма не должно быть пустым");
         }
         if (film.getDescription() != null && film.getDescription().length() > 200) {
             throw new ValidationException("Описание не должно быть больше 200 символов");
         }
-        if (film.getReleaseDate() != null && film.getReleaseDate().isBefore(LocalDate.of(1895, 12, 28))) {
+        if (film.getReleaseDate() != null && film.getReleaseDate().isBefore(CINEMA_BIRTHDAY)) {
             throw new ValidationException("Дата релиза не может быть раньше 28.12.1895");
         }
         if (film.getDuration() <= 0) {
